Fix docker-compose deploy
