# todos/docs/swagger.json
@@ -28,6 +28,17 @@
                 ],
                 "summary": "Create new todo task",
                 "operationId": "create-todo",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TodoRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": ""
@@ -171,6 +182,20 @@
             "type": "object",
             "properties": {
                 "time": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.TodoRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "time_to_complete": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
